# challenge-response

./: .tarpaulin.toml  Cargo.toml  LICENSE  README.md
.github/: CODEOWNERS
.github/workflows/: ci.yaml  ci.yml  merge.yaml  merge.yml
examples/: README.md  challenge_response_hmac.rs  challenge_response_otp.rs  configuration_hmac.rs  configuration_otp.rs  find_all_devices.rs  is_configured.rs  read_status.rs  serial_number.rs
src/: challengeresponseerror.rs  config.rs  configure.rs  error.rs  hmacmode.rs  lib.rs  manager.rs  nusb_manager.rs  otpmode.rs  sec.rs  usb.rs
src/usb/: nusb.rs  rusb.rs
