[package]
name = "challenge_response"
version = "0.0.0-placeholder-version"
authors = ["Ashutosh Varma <github@ashu.io>", "louib <code@louib.net>"]

description = "Challenge-Response library for Rust"
license = "MIT OR Apache-2.0"
keywords = ["yubikey", "authentication", "encryption", "configuration", "Challenge-Response"]
categories = ["authentication"]
repository = "https://github.com/louib/challenge-response"
readme = "README.md"

include = [
  "src/",
  "README.md",
  "LICENSE",
]

[lib]
name = "challenge_response"
path = "src/lib.rs"

[dependencies]
rand = "0.8"
bitflags = "2.4"
rusb = "0.9"
structure = "0.1"
aes = "0.8"
block-modes = "0.9"
hmac = "0.12"
sha-1 = "0.10"

[dev-dependencies]
hex = "0.4"
